--- a/src/Mobile/PlanShare.App/Resources/Styles/LabelStyles.xaml
+++ b/src/Mobile/PlanShare.App/Resources/Styles/LabelStyles.xaml
@@ -3,9 +3,11 @@
   xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
   xmlns:constants="clr-namespace:PlanShare.App.Constants">
   <Style TargetType="Label">
-    <Setter Property="TextColor" Value="Black" />
     <Setter Property="FontFamily" Value="{x:Static constants:FontFamily.SecondaryFontRegular}" />
     <Setter Property="FontSize" Value="14" />
+    <Setter
+      Property="TextColor"
+      Value="{AppThemeBinding Light={StaticResource PRIMARY_COLOR_LIGHT}, Dark={StaticResource PRIMARY_COLOR_DARK} }" />
   </Style>
 
   <Style x:Key="PageTitle" TargetType="Label">
