--- a/src/Mobile/PlanShare.App/Views/Components/Inputs/EntryAndLabelPasswordComponent.xaml
+++ b/src/Mobile/PlanShare.App/Views/Components/Inputs/EntryAndLabelPasswordComponent.xaml
@@ -16,6 +16,7 @@
         x:Name="PasswordEntry"
         Grid.Column="0"
         IsPassword="True"
+        ReturnType="Done"
         Placeholder="Mínimo de 8 caracteres"
         PlaceholderColor="#808080"
         TextColor="Black" />
