--- a/src/Mobile/PlanShare.App/Views/Pages/User/Register/RegisterUserAccountPage.xaml
+++ b/src/Mobile/PlanShare.App/Views/Pages/User/Register/RegisterUserAccountPage.xaml
@@ -31,7 +31,7 @@
 
     <Button
       Margin="0,40"
-      BackgroundColor="#0065F2"
+      BackgroundColor="{AppThemeBinding Light={StaticResource HIGHLIGHT_COLOR_LIGHT}, Dark={StaticResource HIGHLIGHT_COLOR_DARK}}"
       CornerRadius="20"
       HeightRequest="60"
       Text="{x:Static resourceFile:ResourceTexts.TITLE_REGISTER_MY_ACCOUNT}" />
@@ -50,7 +50,7 @@
             <Span
               FontFamily="{x:Static constants:FontFamily.SecondaryFontBlack}"
               Text="{x:Static resourceFile:ResourceTexts.PHRASE_DO_LOGIN}"
-              TextColor="#0065F2" />
+              TextColor="{AppThemeBinding Light={StaticResource HIGHLIGHT_COLOR_LIGHT}, Dark={StaticResource HIGHLIGHT_COLOR_DARK}}" />
           </FormattedString>
         </Label.FormattedText>
       </Label>
