--- a/src/Mobile/PlanShare.App/App.xaml
+++ b/src/Mobile/PlanShare.App/App.xaml
@@ -1,14 +1,14 @@
-﻿<?xml version="1.0" encoding="UTF-8" ?>
+﻿<?xml version="1.0" encoding="UTF-8"?>
 
 <Application
   x:Class="PlanShare.App.App"
   xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
   xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
   <Application.Resources>
-    <!--  Aqui será estilo Global, então todos os botões terão esse estilo  -->
-
+    <!-- Aqui será estilo Global, então todos os botões terão esse estilo -->
     <ResourceDictionary>
       <ResourceDictionary.MergedDictionaries>
+        <ResourceDictionary Source="Resources/Styles/Colors.xaml" />
         <ResourceDictionary Source="Resources/Styles/ButtonStyles.xaml" />
         <ResourceDictionary Source="Resources/Styles/ContentPageStyles.xaml" />
         <ResourceDictionary Source="Resources/Styles/LabelStyles.xaml" />
