--- a/src/Mobile/PlanShare.App/Resources/Styles/ContentPageStyles.xaml
+++ b/src/Mobile/PlanShare.App/Resources/Styles/ContentPageStyles.xaml
@@ -1,11 +1,14 @@
-<ResourceDictionary xmlns="http://schemas.microsoft.com/dotnet/2021/maui" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
-
+<ResourceDictionary
+  xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+  xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
   <!--
     ApplyToDerivedTypes: true - faz com que seja aplicado em todos
     code-behind que herdam da classe ContentPage
   -->
   <Style ApplyToDerivedTypes="True" TargetType="ContentPage">
     <Setter Property="Padding" Value="20, 40" />
+    <Setter
+      Property="BackgroundColor"
+      Value="{AppThemeBinding Light={StaticResource PAGE_BACKGROUND_COLOR_LIGHT}, Dark={StaticResource PAGE_BACKGROUND_COLOR_DARK}}" />
   </Style>
-
 </ResourceDictionary>
