--- a/src/Mobile/PlanShare.App/Views/Pages/OnBoarding/OnBoardingPage.xaml
+++ b/src/Mobile/PlanShare.App/Views/Pages/OnBoarding/OnBoardingPage.xaml
@@ -45,7 +45,7 @@
       CornerRadius="20"
       HeightRequest="60"
       ImageSource="google_logo.png"
-      Text="{x:Static resourceFile:ResourceTexts.PHRASE_ALREADY_HAS_ACCOUNT}"
+      Text="{x:Static resourceFile:ResourceTexts.PHRASE_CONTINUE_WITH_GOOGLE}"
       TextColor="Black" />
 
     <Button
@@ -73,7 +73,7 @@
             <Span
               FontFamily="{x:Static constants:FontFamily.SecondaryFontBlack}"
               Text="{x:Static resourceFile:ResourceTexts.PHRASE_REGISTER_YOUR_ACCOUNT}"
-              TextColor="#0065F2" />
+              TextColor="{AppThemeBinding Light={StaticResource HIGHLIGHT_COLOR_LIGHT}, Dark={StaticResource HIGHLIGHT_COLOR_DARK}}" />
           </FormattedString>
         </Label.FormattedText>
       </Label>
