--- a/src/Mobile/PlanShare.App/Views/Components/Inputs/EntryAndLabelComponent.xaml
+++ b/src/Mobile/PlanShare.App/Views/Components/Inputs/EntryAndLabelComponent.xaml
@@ -13,8 +13,6 @@
     <Entry
       Keyboard="{Binding Keyboard}"
       Placeholder="{Binding Placeholder}"
-      PlaceholderColor="#808080"
-      ReturnType="Next"
-      TextColor="Black" />
+      ReturnType="Next" />
   </VerticalStackLayout>
 </ContentView>
