--- a/src/Mobile/PlanShare.App/Views/Components/Inputs/EntryAndLabelPasswordComponent.xaml
+++ b/src/Mobile/PlanShare.App/Views/Components/Inputs/EntryAndLabelPasswordComponent.xaml
@@ -4,22 +4,19 @@
   x:Class="PlanShare.App.Views.Components.Inputs.EntryAndLabelPasswordComponent"
   xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
   xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+  xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
   x:Name="this">
   <VerticalStackLayout BindingContext="{x:Reference this}">
-    <Label
-      Style="{StaticResource TitleForEntry}"
-      Text="{Binding Title}" />
-    
+    <Label Style="{StaticResource TitleForEntry}" Text="{Binding Title}" />
+
     <Grid ColumnDefinitions="*, 40">
-    <!--  * = Irá preencher a largura máxima, 40 = espaço da segunda coluna  -->
+      <!--  * = Irá preencher a largura máxima, 40 = espaço da segunda coluna  -->
       <Entry
         x:Name="PasswordEntry"
         Grid.Column="0"
         IsPassword="True"
-        ReturnType="Done"
         Placeholder="Mínimo de 8 caracteres"
-        PlaceholderColor="#808080"
-        TextColor="Black" />
+        ReturnType="Done" />
 
       <Grid
         Grid.Column="1"
@@ -29,7 +26,14 @@
         <Grid.GestureRecognizers>
           <TapGestureRecognizer Tapped="ShowHidePassword" />
         </Grid.GestureRecognizers>
-        <Image x:Name="ImageEye" Source="icon_eye_hidden.png" />
+        <Image x:Name="ImageEye" Source="icon_eye_hidden.png">
+          <Image.Behaviors>
+            <toolkit:IconTintColorBehavior
+              TintColor="{AppThemeBinding 
+                Light={StaticResource PRIMARY_COLOR_LIGHT}, 
+                Dark={StaticResource PRIMARY_COLOR_DARK}}" />
+          </Image.Behaviors>
+        </Image>
       </Grid>
     </Grid>
   </VerticalStackLayout>
