Conectando as Entry com as ViewModels

--- a/src/Mobile/PlanShare.App/Views/Components/Inputs/EntryAndLabelPasswordComponent.xaml
+++ b/src/Mobile/PlanShare.App/Views/Components/Inputs/EntryAndLabelPasswordComponent.xaml
@@ -16,7 +16,8 @@
         Grid.Column="0"
         IsPassword="True"
         Placeholder="Mínimo de 8 caracteres"
-        ReturnType="Done" />
+        ReturnType="Done" 
+        Text="{Binding TextValue}"/>
 
       <Grid
         Grid.Column="1"
