--- a/src/Mobile/PlanShare.App/Views/Components/Inputs/EntryAndLabelComponent.xaml
+++ b/src/Mobile/PlanShare.App/Views/Components/Inputs/EntryAndLabelComponent.xaml
@@ -13,6 +13,7 @@
     <Entry
       Keyboard="{Binding Keyboard}"
       Placeholder="{Binding Placeholder}"
-      ReturnType="Next" />
+      ReturnType="Next"
+      Text="{Binding TextValue}" />
   </VerticalStackLayout>
 </ContentView>
