--- a/src/Mobile/PlanShare.App/Views/Pages/Login/DoLogin/DoLoginPage.xaml
+++ b/src/Mobile/PlanShare.App/Views/Pages/Login/DoLogin/DoLoginPage.xaml
@@ -6,7 +6,9 @@
   xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
   xmlns:components="clr-namespace:PlanShare.App.Views.Components.Inputs"
   xmlns:constants="clr-namespace:PlanShare.App.Constants"
-  xmlns:resourceFile="clr-namespace:PlanShare.App.Resources">
+  xmlns:resourceFile="clr-namespace:PlanShare.App.Resources"
+  xmlns:viewModel="clr-namespace:PlanShare.App.ViewModels.Pages.Login.DoLogin"
+  x:DataType="viewModel:DoLoginViewModel">
   <VerticalStackLayout Spacing="30">
     <Label
       Margin="0,0,0,10"
@@ -16,10 +18,12 @@
     <components:EntryAndLabelComponent
       Title="{x:Static resourceFile:ResourceTexts.TITLE_EMAIL}"
       Keyboard="Email"
+      TextValue="{Binding Model.Email}"
       Placeholder="bruce@wayne.com" />
 
     <components:EntryAndLabelPasswordComponent
-      Title="{x:Static resourceFile:ResourceTexts.TITLE_PASSWORD}" />
+      Title="{x:Static resourceFile:ResourceTexts.TITLE_PASSWORD}"
+      TextValue="{Binding Model.Password}" />
 
     <Grid Margin="0,10,0,0" HeightRequest="40">
       <Label
@@ -30,6 +34,9 @@
         VerticalOptions="Center" />
     </Grid>
 
-    <Button Text="{x:Static resourceFile:ResourceTexts.PHRASE_LOGIN}" />
+    <Button
+      Text="{x:Static resourceFile:ResourceTexts.PHRASE_LOGIN}"
+      Command="{Binding DoLoginCommand}" />
+
   </VerticalStackLayout>
 </ContentPage>
