Estudando sobre animações no .NET MAUI

--- a/src/Mobile/PlanShare.App/Views/Pages/Login/DoLogin/DoLoginPage.xaml
+++ b/src/Mobile/PlanShare.App/Views/Pages/Login/DoLogin/DoLoginPage.xaml
@@ -4,39 +4,62 @@
   x:Class="PlanShare.App.Views.Pages.Login.DoLogin.DoLoginPage"
   xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
   xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-  xmlns:components="clr-namespace:PlanShare.App.Views.Components.Inputs"
+  xmlns:inputComponent="clr-namespace:PlanShare.App.Views.Components.Inputs"
+  xmlns:animationComponent="clr-namespace:PlanShare.App.Views.Components.StatusPage"
+  xmlns:enums="clr-namespace:PlanShare.App.Enums"
   xmlns:constants="clr-namespace:PlanShare.App.Constants"
   xmlns:resourceFile="clr-namespace:PlanShare.App.Resources"
   xmlns:viewModel="clr-namespace:PlanShare.App.ViewModels.Pages.Login.DoLogin"
   x:DataType="viewModel:DoLoginViewModel">
-  <VerticalStackLayout Spacing="30">
-    <Label
-      Margin="0,0,0,10"
-      Style="{StaticResource PageTitle}"
-      Text="{x:Static resourceFile:ResourceTexts.PHRASE_LOGIN}" />
+  <VerticalStackLayout>
+    <VerticalStackLayout Spacing="30" IsVisible="False">
+      <VerticalStackLayout.Triggers>
+        <DataTrigger
+          TargetType="VerticalStackLayout"
+          Binding="{Binding StatusPage}"
+          Value="{x:Static enums:StatusPage.Default}">
+          <Setter Property="IsVisible" Value="True" />
+        </DataTrigger>
+      </VerticalStackLayout.Triggers>
 
-    <components:EntryAndLabelComponent
-      Title="{x:Static resourceFile:ResourceTexts.TITLE_EMAIL}"
-      Keyboard="Email"
-      TextValue="{Binding Model.Email}"
-      Placeholder="bruce@wayne.com" />
-
-    <components:EntryAndLabelPasswordComponent
-      Title="{x:Static resourceFile:ResourceTexts.TITLE_PASSWORD}"
-      TextValue="{Binding Model.Password}" />
-
-    <Grid Margin="0,10,0,0" HeightRequest="40">
       <Label
-        FontFamily="{x:Static constants:FontFamily.MainFontBlack}"
-        HorizontalOptions="End"
-        Text="{x:Static resourceFile:ResourceTexts.PHRASE_FORGOT_YOUR_PASSWORD}"
-        TextDecorations="Underline"
-        VerticalOptions="Center" />
-    </Grid>
+        Margin="0,0,0,10"
+        Style="{StaticResource PageTitle}"
+        Text="{x:Static resourceFile:ResourceTexts.PHRASE_LOGIN}" />
 
-    <Button
-      Text="{x:Static resourceFile:ResourceTexts.PHRASE_LOGIN}"
-      Command="{Binding DoLoginCommand}" />
+      <inputComponent:EntryAndLabelComponent
+        Title="{x:Static resourceFile:ResourceTexts.TITLE_EMAIL}"
+        Keyboard="Email"
+        TextValue="{Binding Model.Email}"
+        Placeholder="bruce@wayne.com" />
 
+      <inputComponent:EntryAndLabelPasswordComponent
+        Title="{x:Static resourceFile:ResourceTexts.TITLE_PASSWORD}"
+        TextValue="{Binding Model.Password}" />
+
+      <Grid Margin="0,10,0,0" HeightRequest="40">
+        <Label
+          FontFamily="{x:Static constants:FontFamily.MainFontBlack}"
+          HorizontalOptions="End"
+          Text="{x:Static resourceFile:ResourceTexts.PHRASE_FORGOT_YOUR_PASSWORD}"
+          TextDecorations="Underline"
+          VerticalOptions="Center" />
+      </Grid>
+
+      <Button
+        Text="{x:Static resourceFile:ResourceTexts.PHRASE_LOGIN}"
+        Command="{Binding DoLoginCommand}" />
+    </VerticalStackLayout>
+
+    <animationComponent:AnimationSendingInfoComponent IsVisible="False">
+      <animationComponent:AnimationSendingInfoComponent.Triggers>
+        <DataTrigger
+          TargetType="animationComponent:AnimationSendingInfoComponent"
+          Binding="{Binding StatusPage}"
+          Value="{x:Static enums:StatusPage.Sending}">
+          <Setter Property="IsVisible" Value="True"/>
+        </DataTrigger>
+      </animationComponent:AnimationSendingInfoComponent.Triggers>
+    </animationComponent:AnimationSendingInfoComponent>
   </VerticalStackLayout>
 </ContentPage>
