--- a/src/Mobile/PlanShare.App/Views/Pages/User/Register/RegisterUserAccountPage.xaml
+++ b/src/Mobile/PlanShare.App/Views/Pages/User/Register/RegisterUserAccountPage.xaml
@@ -4,69 +4,92 @@
   x:Class="PlanShare.App.Views.Pages.User.Register.RegisterUserAccountPage"
   xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
   xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-  xmlns:components="clr-namespace:PlanShare.App.Views.Components.Inputs"
+  xmlns:inputComponent="clr-namespace:PlanShare.App.Views.Components.Inputs"
+  xmlns:animationComponent="clr-namespace:PlanShare.App.Views.Components.StatusPage"
   xmlns:constants="clr-namespace:PlanShare.App.Constants"
   xmlns:resourceFile="clr-namespace:PlanShare.App.Resources"
   xmlns:viewModel="clr-namespace:PlanShare.App.ViewModels.Pages.User.Register"
+  xmlns:enums="clr-namespace:PlanShare.App.Enums"
   x:DataType="viewModel:RegisterUserAccountViewModel">
-
-  <VerticalStackLayout Spacing="30">
-    <Label
-      Style="{StaticResource PageTitle}"
-      Text="{x:Static resourceFile:ResourceTexts.TITLE_REGISTER_MY_ACCOUNT}" />
-
-    <Label
-      Margin="0,-10,0,10"
-      Text="{x:Static resourceFile:ResourceTexts.SUBTITLE_REGISTER_ACCOUNT}" />
-
-    <components:EntryAndLabelComponent
-      Title="{x:Static resourceFile:ResourceTexts.TITLE_NAME}"
-      Placeholder="Bruce Wayne"
-      TextValue="{Binding Model.Name}" />
-
-    <components:EntryAndLabelComponent
-      Title="{x:Static resourceFile:ResourceTexts.TITLE_EMAIL}"
-      Keyboard="Email"
-      Placeholder="bruce@wayne.com"
-      TextValue="{Binding Model.Email}" />
-
-    <components:EntryAndLabelPasswordComponent
-      Title="{x:Static resourceFile:ResourceTexts.TITLE_PASSWORD}"
-      TextValue="{Binding Model.Password}" />
-
-    <Button
-      Margin="0,40"
-      BackgroundColor="{AppThemeBinding 
-        Light={StaticResource HIGHLIGHT_COLOR_LIGHT}, 
-        Dark={StaticResource HIGHLIGHT_COLOR_DARK}}"
-      CornerRadius="20"
-      HeightRequest="60"
-      Text="{x:Static resourceFile:ResourceTexts.TITLE_REGISTER_MY_ACCOUNT}" />
-
-    <Grid HeightRequest="50">
-      <Grid.GestureRecognizers>
-        <TapGestureRecognizer Command="{Binding GoToLoginCommand}" />
-      </Grid.GestureRecognizers>
+  <VerticalStackLayout>
+    <VerticalStackLayout Spacing="30" IsVisible="False">
+      <VerticalStackLayout.Triggers>
+        <DataTrigger
+          TargetType="VerticalStackLayout"
+          Binding="{Binding StatusPage}"
+          Value="{x:Static enums:StatusPage.Default}">
+          <Setter Property="IsVisible" Value="True"/>
+        </DataTrigger>
+      </VerticalStackLayout.Triggers>
 
       <Label
-        FontSize="17"
-        HorizontalOptions="Center"
-        VerticalOptions="Center">
-        <Label.FormattedText>
-          <FormattedString>
-            <Span
-              FontFamily="{x:Static constants:FontFamily.SecondaryFontRegular}"
-              Text="{x:Static resourceFile:ResourceTexts.PHRASE_ALREADY_HAS_ACCOUNT}" />
-            <Span Text=" " />
-            <Span
-              FontFamily="{x:Static constants:FontFamily.SecondaryFontBlack}"
-              Text="{x:Static resourceFile:ResourceTexts.PHRASE_DO_LOGIN}"
-              TextColor="{AppThemeBinding 
+        Style="{StaticResource PageTitle}"
+        Text="{x:Static resourceFile:ResourceTexts.TITLE_REGISTER_MY_ACCOUNT}" />
+
+      <Label
+        Margin="0,-10,0,10"
+        Text="{x:Static resourceFile:ResourceTexts.SUBTITLE_REGISTER_ACCOUNT}" />
+
+      <inputComponent:EntryAndLabelComponent
+        Title="{x:Static resourceFile:ResourceTexts.TITLE_NAME}"
+        Placeholder="Bruce Wayne"
+        TextValue="{Binding Model.Name}" />
+
+      <inputComponent:EntryAndLabelComponent
+        Title="{x:Static resourceFile:ResourceTexts.TITLE_EMAIL}"
+        Keyboard="Email"
+        Placeholder="bruce@wayne.com"
+        TextValue="{Binding Model.Email}" />
+
+      <inputComponent:EntryAndLabelPasswordComponent
+        Title="{x:Static resourceFile:ResourceTexts.TITLE_PASSWORD}"
+        TextValue="{Binding Model.Password}" />
+
+      <Button
+        Margin="0,40"
+        BackgroundColor="{AppThemeBinding 
+        Light={StaticResource HIGHLIGHT_COLOR_LIGHT}, 
+        Dark={StaticResource HIGHLIGHT_COLOR_DARK}}"
+        CornerRadius="20"
+        HeightRequest="60"
+        Text="{x:Static resourceFile:ResourceTexts.TITLE_REGISTER_MY_ACCOUNT}"
+        Command="{Binding RegisterAccountCommand}" />
+
+      <Grid HeightRequest="50">
+        <Grid.GestureRecognizers>
+          <TapGestureRecognizer Command="{Binding GoToLoginCommand}" />
+        </Grid.GestureRecognizers>
+        <Label
+          FontSize="17"
+          HorizontalOptions="Center"
+          VerticalOptions="Center">
+          <Label.FormattedText>
+            <FormattedString>
+              <Span
+                FontFamily="{x:Static constants:FontFamily.SecondaryFontRegular}"
+                Text="{x:Static resourceFile:ResourceTexts.PHRASE_ALREADY_HAS_ACCOUNT}" />
+              <Span Text=" " />
+              <Span
+                FontFamily="{x:Static constants:FontFamily.SecondaryFontBlack}"
+                Text="{x:Static resourceFile:ResourceTexts.PHRASE_DO_LOGIN}"
+                TextColor="{AppThemeBinding 
                 Light={StaticResource HIGHLIGHT_COLOR_LIGHT},
                 Dark={StaticResource HIGHLIGHT_COLOR_DARK}}" />
-          </FormattedString>
-        </Label.FormattedText>
-      </Label>
-    </Grid>
+            </FormattedString>
+          </Label.FormattedText>
+        </Label>
+      </Grid>
+    </VerticalStackLayout>
+
+    <animationComponent:AnimationSendingInfoComponent IsVisible="False">
+      <animationComponent:AnimationSendingInfoComponent.Triggers>
+        <DataTrigger
+          TargetType="animationComponent:AnimationSendingInfoComponent"
+          Binding="{Binding StatusPage}"
+          Value="{x:Static enums:StatusPage.Sending}">
+          <Setter Property="IsVisible" Value="True"/>
+        </DataTrigger>
+      </animationComponent:AnimationSendingInfoComponent.Triggers>
+    </animationComponent:AnimationSendingInfoComponent>
   </VerticalStackLayout>
 </ContentPage>
